more edits to morphology scripts

--- a/.gitignore
+++ b/.gitignore
@@ -117,5 +117,7 @@ TSWLatexianTemp*
 refs.bib.bak
 
 RB_TotalEvidenceDating_FBD_Tutorial/output/*
+RB_Discrete_Morphology_Tutorial/output/*
+RB_Biogeography_Tutorial/output/*
 .texpadtmp
 
