--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,8 @@ history.txt
 TSWLatexianTemp*
 refs.bib.bak
 
+RB_DiversificationRate_Episodic_Tutorial/*.pdf
+RB_DiversificationRate_Episodic_Tutorial/output/*
 RB_TotalEvidenceDating_FBD_Tutorial/output/*
 RB_Discrete_Morphology_Tutorial/output/*
 RB_Biogeography_Tutorial/output/*
