Adding a under prior mcmc for the Yule model; adding the BiSSE keynote figure; and updating the git ignore again

--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,9 @@ history.txt
 TSWLatexianTemp*
 refs.bib.bak
 
+tutorial_TeX/RB_DiversificationRateIntro_Tutorial/*-encoding-backup.tex
+tutorial_TeX/RB_DiversificationRateIntro_Tutorial/figures/*-encoding-backup.pdf
+
 RB_DiversificationRate_Episodic_Tutorial/*.pdf
 RB_DiversificationRate_Episodic_Tutorial/output/*
 RB_TotalEvidenceDating_FBD_Tutorial/output/*
