minor edit to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ RB_Discrete_Morphology_Tutorial/output/*
 RB_Biogeography_Tutorial/output/*
 .texpadtmp
 
+RB_TotalEvidenceDating_FBD_Tutorial/*ipynb
